--- a/admin/package.json
+++ b/admin/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "typeorm": "^0.3.10"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
