--- a/admin/package.json
+++ b/admin/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.10"
   },
   "devDependencies": {
